JumpScript/tests/baselines/reference/constructorArgsErrors4.errors.txt
tests/cases/compiler/constructorArgsErrors4.jump(2,26): error TS1028: Accessibility modifier already seen.


==== tests/cases/compiler/constructorArgsErrors4.jump (1 errors) ====
    class foo {
        constructor (private public a: number) {
                             ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        }
    }
    